index and style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="options">
       <div id="session">
         <i id="incrSession" class="fas fa-angle-double-up"></i>
-        <span class="option-title">Session</span>
+        <span class="option-title">Session 1234585465</span>
         <input id="sessionInput" type="number" value="30" max="60" min="5">
         <i id="decrSession" class="fas fa-angle-double-down"></i>
       </div>
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div id="audio-selector">
-    <div id="forest" class="theme"><!--🌲 -->Forest</div>
+    <div id="forest" class="theme"><!--🌲 -->Forest </div>
     <div id="ocean" class="theme"><!--🌊 -->Ocean</div>
     <div id="rainy" class="selected theme"><!--🌧 -->Rainy</div>
     <div id="peace" class="theme"><!--🧘 -->Peace</div>
